Plein de modifs

--- a/OrDragon/OrDragon/Views/Shared/_Layout.cshtml
+++ b/OrDragon/OrDragon/Views/Shared/_Layout.cshtml
@@ -38,5 +38,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    @if (TempData["Modal"] != null) {@Html.Partial("_Modal")};
 </body>
 </html>
