--- a/OrDragon/OrDragon/Views/Shared/_UserLogin.cshtml
+++ b/OrDragon/OrDragon/Views/Shared/_UserLogin.cshtml
@@ -17,7 +17,33 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("S’inscrire", "Register", "User", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Se connecter", "Login", "User", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+            <ul id="login-dp" class="dropdown-menu">
+                <li>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <form class="form" role="form" method="post" action="/user/login" accept-charset="UTF-8" id="login-nav">
+                                @Html.AntiForgeryToken()
+                                <div class="form-group">
+                                    <label class="sr-only" for="exampleInputEmail2">Nom d'utilisateur</label>
+                                    <input type="text" data-val="true" class="form-control" id="Username" name="Username" placeholder="Nom d'utilisateur" required>
+                                </div>
+                                <div class="form-group">
+                                    <label class="sr-only" for="exampleInputPassword2">Mot de passe</label>
+                                    <input type="password" class="form-control" id="Password" name="Password" placeholder="Mot de passe" required>
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-primary btn-block">S'authentifier</button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="bottom text-center">
+                            Nouveau ? @Html.ActionLink("S’inscrire", "Register", "User", routeValues: null, htmlAttributes: new { id = "registerLink" })
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </li>
     </ul>
 }
