--- a/OrDragon/OrDragon/Views/Home/Index.cshtml
+++ b/OrDragon/OrDragon/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
+<script src="~/scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
+<script src="~/Scripts/jquery.signalR-2.2.0.js"></script>
+<script src="/SignalR/hubs"></script>
+<script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
@@ -30,9 +33,73 @@
     </div>
 </div>*@
 <div id="gamemap">
-
+    <canvas id="canvas" width="1066" height="600"></canvas>
 </div>
 
 <script>
+    var stage;
+    var bg;
 
+    (function ($) {
+        $(window).resize(function () {
+            resize();
+        });
+    })(jQuery);
+
+    window.onload = function () {
+        init();
+    };
+
+    function init() {
+        stage = new createjs.Stage("canvas");
+        bg = new createjs.Bitmap("http://prog101.com/travaux/dragon/images/carte02.png");
+        stage.addChild(bg);
+
+        createjs.Ticker.addEventListener("tick", tick);
+        resize();
+
+    }
+
+    function tick() {
+        stage.update();
+    }
+
+
+    function resize() {
+        stage.canvas.width = document.getElementById("gamemap").style.width;
+        stage.canvas.height = document.getElementById("gamemap").style.height;
+        bg.scaleX = stage.canvas.width / bg.image.width;
+        bg.scaley = stage.canvas.height / bg.image.height;
+    }
+
+    //var c = new createjs.Shape();
+    //c.graphics.f("#f00").dc(0, 0, 50); // Drawn a 100x100 circle from the center
+
+    //t.x = t.y = 20;
+    //stage.addChild(c, t);
+
+    //window.addEventListener("resize", handleResize);
+    //function handleResize() {
+    //    var w = window.innerWidth - 2; // -2 accounts for the border
+    //    var h = window.innerHeight - 2;
+    //    stage.canvas.width = w;
+    //    stage.canvas.height = h;
+    //    //
+    //    var ratio = 100 / 100; // 100 is the width and height of the circle content.
+    //    var windowRatio = w / h;
+    //    var scale = w / 100;
+    //    if (windowRatio > ratio) {
+    //        scale = h / 100;
+    //    }
+    //    // Scale up to fit width or height
+    //    c.scaleX = c.scaleY = scale;
+
+    //    // Center the shape
+    //    c.x = w / 2;
+    //    c.y = h / 2;
+
+    //    stage.update();
+    //}
+
+    //handleResize(); // First draw
 </script>
