--- a/OrDragon/OrDragon/Views/Home/Index.cshtml
+++ b/OrDragon/OrDragon/Views/Home/Index.cshtml
@@ -4,36 +4,20 @@
 <script src="~/Scripts/jquery.signalR-2.2.0.js"></script>
 <script src="/SignalR/hubs"></script>
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+
+<div id="gamemap">
+    <canvas id="canvas"></canvas>
 </div>
 
-@*<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>*@
-<div id="gamemap">
-    <canvas id="canvas" width="1066" height="600"></canvas>
-</div>
+<style>
+    .container {
+        max-width: 2000px !important;
+    }
+
+    .big {
+        width:100%;
+    }
+</style>
 
 <script>
     var stage;
@@ -173,36 +157,11 @@
 
         stage.scaleX = tmpwidth / bg.image.width;
         stage.scaleY = stage.scaleX;
+
+        stage.canvas.width = tmpwidth;
+        stage.canvas.height = stage.scaleY * 900;
+
+        //if (stage.scaleX > 1) $("#canvas").removeClass().addClass("big");
+        //else $("#canvas").removeClass();
     }
-
-    //var c = new createjs.Shape();
-    //c.graphics.f("#f00").dc(0, 0, 50); // Drawn a 100x100 circle from the center
-
-    //t.x = t.y = 20;
-    //stage.addChild(c, t);
-
-    //window.addEventListener("resize", handleResize);
-    //function handleResize() {
-    //    var w = window.innerWidth - 2; // -2 accounts for the border
-    //    var h = window.innerHeight - 2;
-    //    stage.canvas.width = w;
-    //    stage.canvas.height = h;
-    //    //
-    //    var ratio = 100 / 100; // 100 is the width and height of the circle content.
-    //    var windowRatio = w / h;
-    //    var scale = w / 100;
-    //    if (windowRatio > ratio) {
-    //        scale = h / 100;
-    //    }
-    //    // Scale up to fit width or height
-    //    c.scaleX = c.scaleY = scale;
-
-    //    // Center the shape
-    //    c.x = w / 2;
-    //    c.y = h / 2;
-
-    //    stage.update();
-    //}
-
-    //handleResize(); // First draw
 </script>
