--- a/OrDragon/OrDragon/Views/Home/Index.cshtml
+++ b/OrDragon/OrDragon/Views/Home/Index.cshtml
@@ -85,6 +85,7 @@
 
     function init() {
         stage = new createjs.Stage("canvas");
+        stage.enableMouseOver();
         stage.canvas.width = 1600;
         stage.canvas.height = 900;
 
@@ -141,6 +142,7 @@
                 circle_noeud.drawCircle(0, 0, 10);
 
                 var s = new createjs.Shape(circle_noeud);
+                s.cursor = "pointer";
                 s.x = noeuds[i].Coordonates.X;
                 s.y = noeuds[i].Coordonates.Y;
 
