Changer 2-3 choses dans questions

--- a/OrDragon/OrDragon/Views/Question/index.cshtml
+++ b/OrDragon/OrDragon/Views/Question/index.cshtml
@@ -5,27 +5,30 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Text)
-        </th>
-        <th>
+<div>
+    <table class="table">
+        <tr>
+            <th>
+                Question
+            </th>
+            <th>
+                Actions
+            </th>
+        </tr>
 
-        </th>
-    </tr>
+        @foreach (Question item in questions.GetList())
+        {
+            <tr>
+                <td>
+                    @item.Text
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Text)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+    </table>
+</div>
