--- a/OrDragon/OrDragon/Views/Shared/_Layout.cshtml
+++ b/OrDragon/OrDragon/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Questions", "Index", "Question")</li>
                 </ul>
                 @Html.Partial("_UserLogin")
             </div>
