Ajout du model PlayerState, pour les stats des joueurs

--- a/OrDragon/OrDragon/Views/Shared/_Layout.cshtml
+++ b/OrDragon/OrDragon/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
                     <li>@Html.ActionLink("Questions", "Index", "Question")</li>
+                    <li>@Html.ActionLink("State", "Index", "State")</li>
                 </ul>
                 @Html.Partial("_UserLogin")
             </div>
